--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,7 +10,7 @@
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <div class="img-container"><img src={{image}} /></div>
+        <div class="img-container"><img src={{image}} alt="{{title}}"/></div>
         <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
