--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     {{! Page Meta }}
-    <title>Blog de voyages, souvenirs</title>
+    <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
 
     <meta name="HandheldFriendly" content="True" />
@@ -44,6 +44,6 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
-
+<script id="dsq-count-scr" src="//backpackblog.disqus.com/count.js" async></script>
 </body>
 </html>
