--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,8 +10,8 @@
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <div class="img-container"><img src={{image}} alt="{{title}}"/></div>
-        <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+        <div class="img-container"><img src="resize/710x700{{image}}" alt="{{title}}"/></div>
+        <p>{{excerpt words="50"}}...</p><p><a class="read-more" href="{{url}}">Lire la suite</a></p>
     </section>
     <footer class="post-meta">
         {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
