--- a/post.hbs
+++ b/post.hbs
@@ -22,7 +22,7 @@
             <h1 class="post-title">{{title}}</h1>
             <section class="post-meta">
                 <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
-           	<a href="{{url}}#disqus_thread">Commentaires</a>
+           	<div><a href="{{url}}#disqus_thread">Commentaires</a></div>
 		 </section>
         </header>
 
