--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -632,18 +632,7 @@ body.nav-opened .nav {
     counter-reset: item;
 }
 
-.nav li:before {
-    display: block;
-    float: right;
-    padding-right: 4%;
-    padding-left: 5px;
-    text-align: right;
-    font-size: 1.2rem;
-    vertical-align: bottom;
-    color: #B8B8B8;
-    content: counter(item, lower-roman);
-    counter-increment: item;
-}
+
 .nav li {
     margin: 0;
 }
@@ -1567,8 +1556,8 @@ body:not(.post-template) .post-title {
     width: auto;
 }
 
-/* On page2+ make all the headers smaller */
-.archive-template .main-header {
+/* make all the headers smaller */
+.main-header {
     max-height: 30vh;
 }
 
