fix : fix header height on post page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1208,6 +1208,7 @@ body:not(.post-template) .post-title {
 .post-head.main-header {
     height: 65vh;
     min-height: 180px;
+    max-height: none;
 }
 
 .no-cover.post-head.main-header {
