--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,10 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{! Styles'n'Scripts }}
+    <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}"/>
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/owl.carousel.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/owl.theme.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700,700italic,300italic" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -31,6 +34,11 @@
         {{{body}}}
 
         <footer class="site-footer clearfix">
+
+            <div id="instagram-feed">
+                <a class="fa fa-instagram" target="_blank" href="https://instagram.com/_clementf"></a>
+                <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/1c59cf8f4eaa5c558d0f49ce22f16422.html" id="lightwidget_1c59cf8f4e" name="lightwidget_1c59cf8f4e"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+            </div>  
             <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
             
         </footer>
@@ -39,6 +47,7 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/owl.carousel.min.js"}}"></script>
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script id="dsq-count-scr" src="//backpackblog.disqus.com/count.js" async></script>
