--- a/index.hbs
+++ b/index.hbs
@@ -11,15 +11,16 @@
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
-            <h1 class="page-title">Bienvenue !</h1>
+            <h1 class="page-title">Backpacking</h1>
             <h2 class="page-description">{{@blog.description}}</h2>
-        </div>
+        </div>              
     </div>    
+   
 </header>
 
 {{! The main content area on the homepage }}
 <main id="content" class="content" role="main">
-
+    {{> "carousel"}}
     {{! The tag below includes the post loop - partials/loop.hbs }}
     {{> "loop"}}
 
