--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,13 +10,16 @@
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <div class="img-container"><img src="/resize/710x700{{image}}" alt="{{title}}"/></div>
-        <p>{{excerpt words="50"}}...</p><p><a class="read-more" href="{{url}}">Lire la suite</a></p>
+        <div class="img-container"><img src="/resize/800x700{{image}}" alt="{{title}}"/></div>
+        <p>{{excerpt words="50"}}...</p>
+        <p class="center">
+            <a class="read-more" href="{{url}}">Lire la suite</a>
+        </p>
     </section>
     <footer class="post-meta">
         {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
         {{author}}
-        {{tags prefix=" on "}}
+        {{tags prefix=" dans "}}
         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
     </footer>
 </article>
